test/runnable/extra-files/link14828b.d
module link14828b;

void func2()
{
    import link14828stdio;
}
