test/fail_compilation/fail4245a.d
// 4245
void fail4245()
{
    {
        void foo() {}
    }
    {
        void foo() {}
    }
}
